--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="logo"><img src="images/logo.png" alt="Lumina Creative" /></div>
             <ul class="main-menu">
                 <li><a href="index.html" class="current">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="menu-item">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
